--- a/playbooks/install-kubernetes.yaml
+++ b/playbooks/install-kubernetes.yaml
@@ -2,7 +2,7 @@
 - name: Setup Kubernetes on Raspberry Pi Cluster
   hosts: all
   become: true
-  gather_facts: false
+  gather_facts: true
   vars:
     k8s_version: "1.35"
     pod_network_cidr: "10.244.0.0/16"
