Updates to install-kubernetes playbook for setting up local-path-provisioner, eth0 setup stuff

--- a/inventories/kodanad.ini
+++ b/inventories/kodanad.ini
@@ -2,7 +2,7 @@
 homelab-control-plane ansible_host=192.168.31.164 eth0_ip=10.0.0.1
 
 [workers]
-homelab-worker-node ansible_host=192.168.31.72 eth0_ip=10.0.0.2
+homelab-worker ansible_host=192.168.31.72 eth0_ip=10.0.0.2
 
 [all:vars]
 ansible_user=sreeram
