--- a/inventories/hyderabad.ini
+++ b/inventories/hyderabad.ini
@@ -2,7 +2,8 @@
 homelab-control-plane ansible_host=192.168.1.6 eth0_ip=10.0.0.1
 
 [workers]
-homelab-worker-node ansible_host=192.168.1.3 eth0_ip=10.0.0.2
+homelab-worker ansible_host=192.168.1.3 eth0_ip=10.0.0.2
 
 [all:vars]
+ansible_user=sreeram
 ansible_ssh_private_key_file=~/.ssh/id_rsa
